// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectionChip /> ControlledChecked story renders snapshot 1`] = `
<label
  class="selection-chip selection-chip--has-icon"
  for=":r5:"
>
  <input
    checked=""
    class="selection-chip__input"
    id=":r5:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
      />
    </svg>
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> Default story renders snapshot 1`] = `
<label
  class="selection-chip"
  for=":r0:"
>
  <input
    class="selection-chip__input"
    id=":r0:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> Disabled story renders snapshot 1`] = `
<label
  class="selection-chip selection-chip--disabled"
  for=":r3:"
>
  <input
    class="selection-chip__input"
    disabled=""
    id=":r3:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> DisabledSelected story renders snapshot 1`] = `
<label
  class="selection-chip selection-chip--disabled"
  for=":r4:"
>
  <input
    checked=""
    class="selection-chip__input"
    disabled=""
    id=":r4:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> Selected story renders snapshot 1`] = `
<label
  class="selection-chip"
  for=":r1:"
>
  <input
    checked=""
    class="selection-chip__input"
    id=":r1:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> UncontrolledChecked story renders snapshot 1`] = `
<label
  class="selection-chip selection-chip--has-icon"
  for=":r6:"
>
  <input
    checked=""
    class="selection-chip__input"
    id=":r6:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
      />
    </svg>
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> WithIcon story renders snapshot 1`] = `
<label
  class="selection-chip selection-chip--has-icon"
  for=":r2:"
>
  <input
    class="selection-chip__input"
    id=":r2:"
    type="checkbox"
  />
  <div
    class="selection-chip__body"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
      />
    </svg>
    <span
      class="text text--label-lg selection-chip__label"
    >
      Label
    </span>
  </div>
</label>
`;
